# CrewAi-Research-paper

research_paper_system/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
research_paper_system/components/: Sidebar.jsx
research_paper_system/dashboard/: app.py
research_paper_system/dashboard/components/: theme.py
research_paper_system/dashboard/pages/: 01_search.py  02_best_papers.py  02_⭐_Best_Papers.py  03_top_authors.py  04_summaries.py  04_📝_Summaries.py  05_problem_statements.py  05_🧩_Problem_Statements.py  06_citation_graph.py  06_🕸️_Citation_Graph.py  07_ideas.py  08_rankings.py
research_paper_system/data/demo/: demo_results.json
research_paper_system/src/: crew.py  main.py
research_paper_system/src/config/: agents.yaml  settings.py  tasks.yaml
research_paper_system/src/models/: analysis.py  paper.py
research_paper_system/src/services/: embedding_service.py  graph_service.py  paper_ranker.py  progress_tracker.py  source_registry.py  vector_store.py
research_paper_system/src/tools/: arxiv_tool.py  core_tool.py  crossref_tool.py  dblp_tool.py  faiss_tool.py  google_scholar_tool.py  ieee_tool.py  neo4j_tool.py  openalex_tool.py  pdf_tool.py  pubmed_tool.py  sciencedirect_tool.py  scopus_tool.py  semantic_scholar_tool.py
research_paper_system/src/utils/: cache.py  deduplicator.py  (+2 more)
research_paper_system/tests/: conftest.py  test_deduplicator.py  test_integration.py  test_models.py  test_paper_ranker.py  test_progress_tracker.py  test_rate_limiter.py  test_utils.py
